# copy-slack-url-as-markdown

./: Cargo.toml  README.md
.cargo/: config.toml
assets/templates/: rich_text_quote  text  text_quote
slack_client/: Cargo.toml
slack_client/src/: client.rs  emojify.rs  lib.rs  message.rs
slack_client/src/message/: emojify.rs  mod.rs  slack_message.rs  state.rs
slack_client/src/query/: conversations.rs  mod.rs  usergroups.rs  users.rs
slack_client/src/request/: conversations.rs  mod.rs  usergroups.rs  users.rs
slack_client/src/response/: conversations.rs  mod.rs  usergroups.rs  users.rs
src/: args.rs  cli.rs  client.rs  context_key.rs  copier.rs  main.rs  message.rs  slack_client.rs  state.rs
src/client/: mod.rs  state.rs
src/copier/: mod.rs  state.rs
src/slack/: client.rs  emojify.rs  message.rs  mod.rs  query.rs  response.rs
src/slack/query/: conversations.rs  mod.rs  users.rs
src/slack/response/: conversations.rs  users.rs
src/slack_client/: client.rs  mod.rs  query.rs
src/template/: context_key.rs  mod.rs  template_type.rs
templates/: md.template  plain_text  plain_text_quote  rich_text  rich_text_quote  rich_text_quote.template  text_quote  text_quote.template
xtask/src/: emoji.rs  main.rs
