[package]
name = "copy-slack-url-as-markdown"
version = "0.11.0"
edition = "2021"
description = "Copy Slack URL as Markdown"

[[bin]]
name = "s2m"
path = "src/main.rs"

[workspace]
members = ["slack_client", "xtask"]

[dependencies]
# Error handling
anyhow = "1.0.86"

# Clipboard
arboard = "3.4.0"

# Command line arguments
clap = { version = "4.5.16", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.39.3", features = ["rt", "macros", "net", "rt-multi-thread", "fs"] }

# URL parsing
url = "2.5.2"

# Date and time
jiff = "0.1.10"

# Templating
tera = "1.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"

# Slack API client
slack_client = { path = "slack_client" }

# Markdown to HTML
comrak = "0.27.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
