[package]
name = "copy-slack-url-as-markdown"
version = "0.14.4"
edition = "2021"
description = "Copy Slack URL as Markdown"

[[bin]]
name = "s2m"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0.89"

# Clipboard
arboard = "3.4.1"

# Command line arguments
clap = { version = "4.5.17", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.40.0", features = ["rt", "macros", "net", "rt-multi-thread", "fs"] }

# URL parsing
url = "2.5.2"

# Date and time
jiff = "0.1.13"

# Templating
tera = "1.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"

# Slack API client
slack_client = { git = "https://github.com/0x6b/slack_client", tag = "v0.3.3" }

# Markdown to HTML
comrak = "0.28.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
