[package]
name = "copy-slack-url-as-markdown"
version = "0.17.1"
edition = "2021"
description = "Copy Slack URL as Markdown"

[[bin]]
name = "sam"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0.95"

# Clipboard
arboard = "3.4.1"

# Command line arguments
clap = { version = "4.5.28", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.43.0", features = ["rt", "macros", "net", "rt-multi-thread", "fs"] }

# URL parsing
url = "2.5.4"

# Date and time
jiff = "0.1.29"

# Templating
tera = "1.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"

# Slack API client
slack_client = { git = "https://github.com/0x6b/slack_client", tag = "v0.10.1" }

# Markdown to HTML
comrak = "0.35.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
